<resources>
    <string name="app_name">RFCx Guardian</string>
    <string name="menu_prefs">Preferences</string>
    <string-array name="true_or_false">
		<item>true</item>
		<item>false</item>
	</string-array>
    <string-array name="opus_or_flac">
		<item>opus</item>
		<item>flac</item>
	</string-array>
	<string-array name="http_or_https">
		<item>http</item>
		<item>https</item>
	</string-array>
    <string-array name="tcp_or_ssl">
		<item>tcp</item>
		<item>ssl</item>
	</string-array>
    <string-array name="logcat_log_levels">
		<item>Error</item>
		<item>Warn</item>
		<item>Info</item>
		<item>Debug</item>
		<item>Verbose</item>
	</string-array>
    <string-array name="audio_sample_rate_labels">
		<item>8 kHz</item>
		<item>12 kHz</item>
		<item>16 kHz</item>
		<item>20 kHz</item>
		<item>24 kHz</item>
		<item>44.1 kHz</item>
		<item>48 kHz</item>
	</string-array>
    <string-array name="audio_sample_rate_values">
		<item>8000</item>
		<item>12000</item>
		<item>16000</item>
		<item>20000</item>
		<item>24000</item>
		<item>44100</item>
		<item>48000</item>
	</string-array>
    <string-array name="percent_labels">
		<item>90 %</item>
		<item>80 %</item>
		<item>70 %</item>
		<item>60 %</item>
		<item>50 %</item>
		<item>40 %</item>
		<item>30 %</item>
		<item>20 %</item>
		<item>10 %</item>
	</string-array>
    <string-array name="percent_values">
		<item>90</item>
		<item>80</item>
		<item>70</item>
		<item>60</item>
		<item>50</item>
		<item>40</item>
		<item>30</item>
		<item>20</item>
		<item>10</item>
	</string-array>
    <string-array name="audio_encode_bitrate_labels">
		<item>4 kbps</item>
		<item>8 kbps</item>
		<item>12 kbps</item>
		<item>16 kbps</item>
		<item>20 kbps</item>
		<item>24 kbps</item>
		<item>28 kbps</item>
		<item>32 kbps</item>
		<item>40 kbps</item>
		<item>48 kbps</item>
		<item>64 kbps</item>
		<item>80 kbps</item>
		<item>96 kbps</item>
		<item>112 kbps</item>
		<item>128 kbps</item>
	</string-array>
    <string-array name="audio_encode_bitrate_values">
		<item>4096</item>
		<item>8192</item>
		<item>12288</item>
		<item>16384</item>
		<item>20480</item>
		<item>24576</item>
		<item>28672</item>
		<item>32768</item>
		<item>40960</item>
		<item>49152</item>
		<item>65536</item>
		<item>81920</item>
		<item>98304</item>
		<item>114688</item>
		<item>131072</item>
	</string-array>
	<string name="email">Email</string>
	<string name="password">Password</string>
	<string name="login">Login</string>
	<string name="pls_fill_email">Please fill email</string>
	<string name="pls_fill_password">Please fill password</string>
	<string name="incorrect_username_password">Incorrect username or password</string>
	<string name="an_error_occurred">Service unavailable</string>
	<string name="or">OR</string>
    <string name="register">register guardian</string>
    <string name="error_common">An error occurred. Please try again.</string>
    <string name="skip_login">SKIP</string>
    <string name="logout">Logout</string>
</resources>