<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:orientation="horizontal"
                                             android:background="#FFFFFF"
                                             tools:context=".activity.MainActivity">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/colorPrimary"
            android:theme="@style/ToolBarStyle">

    </android.support.v7.widget.Toolbar>

    <android.support.constraint.ConstraintLayout
            android:id="@+id/register_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/toolbar">
        <Button android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/register"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/text_white"
                android:background="@drawable/button_style1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        <LinearLayout
                android:id="@+id/registerInfo"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:background="@color/gray_30"
                android:visibility="invisible"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Registered as: "/>
            <TextView
                    android:id="@+id/deviceIdText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:text="xxxxxxxxx"/>
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>

    <TextView
            android:id="@+id/register_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@id/register_group"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/login_group"
            android:text="Please register the guardian."/>

    <android.support.constraint.ConstraintLayout
            android:id="@+id/record_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@id/register_group"
            app:layout_constraintBottom_toTopOf="@id/start_stop_group">

        <ImageView
                android:id="@+id/record_image"
                android:layout_width="140dp"
                android:layout_height="140dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
                android:id="@+id/recordingStateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/record_image"
                app:layout_constraintStart_toStartOf="@id/record_image"
                app:layout_constraintEnd_toEndOf="@id/record_image"/>
    </android.support.constraint.ConstraintLayout>


    <LinearLayout
            android:id="@+id/start_stop_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@id/record_group"
            app:layout_constraintBottom_toTopOf="@id/login_group">
        <LinearLayout
                android:id="@+id/start_stop_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <Button
                    android:id="@+id/startButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="start"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            <Button
                    android:id="@+id/stopButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="stop"
                    app:layout_constraintTop_toBottomOf="@id/startButton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/status_view"
                app:layout_constraintTop_toBottomOf="@id/stopButton"
                app:layout_constraintStart_toStartOf="@id/stopButton"
                app:layout_constraintEnd_toEndOf="@id/stopButton">
            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="wrap_content">
                <TextView
                        android:id="@+id/checkInTopic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Last checkin: "/>
                <TextView
                        android:id="@+id/checkInText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""/></LinearLayout>
            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="wrap_content">
                <TextView
                        android:id="@+id/sizeTopic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Size:"/>
                <TextView
                        android:id="@+id/sizeText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <android.support.constraint.ConstraintLayout
            android:id="@+id/login_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent">
        <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/login"
                android:minHeight="30dp"
                android:background="@color/colorPrimary"
                android:textColor="@color/text_white"
                android:textAllCaps="true"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        <android.support.constraint.ConstraintLayout
                android:id="@+id/loginInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/gray_30"
                android:visibility="invisible"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="Logged in as: "/>
                <TextView
                        android:id="@+id/userName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:text="xxxxxxxxx"/>
            </LinearLayout>
                <Button
                        android:id="@+id/logoutButton"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_gravity="end"
                        android:background="@color/text_error"
                        android:textColor="@color/text_white"
                        android:textSize="15sp"
                        android:text="@string/logout"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>

    <ProgressBar
            android:id="@+id/registerProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_large"
            android:theme="@style/AppTheme.LoadingProgress"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>